--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-export CLIENT_ID="replace me"
-export CLIENT_SECRET="replace me"
+export CLIENT_ID=a6eb7d2e-2407-4dd3-add0-dbe43f41adbf
+export CLIENT_SECRET=a3a62c4d0f056038e6d9fbccc68231820cfa7da1f672
